Added div to hold domo

--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -24,6 +24,9 @@
   <section id="domos">
     {{#if domos}}
     {{#each domos}}
+    <div class="domo">
+      
+    </div>
     {{/each}}
     {{else}}
     {{/if}}
