--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -25,7 +25,7 @@
     {{#if domos}}
     {{#each domos}}
     <div class="domo">
-      
+      <img src="../hosted/img/domoface.jpeg" alt="Domo face" class="domoFace">
     </div>
     {{/each}}
     {{else}}
