--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -26,6 +26,8 @@
     {{#each domos}}
     <div class="domo">
       <img src="../hosted/img/domoface.jpeg" alt="Domo face" class="domoFace">
+      <h3 class="domoName">Name: {{this.name}}</h3>
+      <h3 class="domoAge">Age: {{this.age}}</h3>
     </div>
     {{/each}}
     {{else}}
